# personal-ip-address

./: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  compile  config.guess  configure  configure.ac  depcomp  install-sh  missing  personal-ip-address.c  personal-ip-address.desktop  personal-ip-address.h
debian/: README.Debian  changelog  control  copyright  personal-ip-address.postinst  rules
m4/: ChangeLog
po/: ChangeLog  Makevars  POTFILES.in  da.po  pl.po
