AC_INIT(Makefile.am)

PACKAGE=personal-ip-address
VERSION=0.4

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_LIBS)
AC_SUBST(GTK_CFLAGS)

PKG_CHECK_MODULES(DESKTOP, libhildondesktop-1)
AC_SUBST(DESKTOP_LIBS)
AC_SUBST(DESKTOP_CFLAGS)

PKG_CHECK_MODULES(CONIC, conic)
AC_SUBST(CONIC_LIBS)
AC_SUBST(CONIC_CFLAGS)

PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1)
AC_SUBST(DBUS_GLIB_LIBS)
AC_SUBST(DBUS_GLIB_CFLAGS)

PKG_CHECK_MODULES(ICD2, osso-ic)
AC_SUBST(ICD2_LIBS)
AC_SUBST(ICD_CFLAGS)

localedir=`$PKG_CONFIG osso-af-settings --variable=localedir`

AC_PROG_INTLTOOL([0.23])
GETTEXT_PACKAGE=personal-ip-address
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED( GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [Name of gettext package ])
ALL_LINGUAS="de fr it pt_BR pl fi da nl sk sv ro tr"
AM_GLIB_GNU_GETTEXT
AC_SUBST(ALL_LINGUAS)
AC_SUBST(localedir)
AC_DEFINE_UNQUOTED(LOCALEDIR,"$localedir",[localedir])

AC_OUTPUT([
    Makefile
    po/Makefile.in
    po/Makefile
])
